--- a/Payment/requirements.txt
+++ b/Payment/requirements.txt
@@ -7,7 +7,9 @@ click==8.1.3
 colorama==0.4.6
 cryptography==39.0.0
 fastapi==0.89.1
+h11==0.14.0
 hiredis==2.1.1
+httptools==0.5.0
 idna==3.4
 more-itertools==8.14.0
 pptree==3.1
@@ -15,6 +17,7 @@ pycparser==2.21
 pydantic==1.10.4
 python-dotenv==0.21.0
 python-ulid==1.1.0
+PyYAML==6.0
 redis==4.4.2
 redis-om==0.1.2
 requests==2.28.2
@@ -24,3 +27,6 @@ types-pyOpenSSL==23.0.0.2
 types-redis==4.4.0.3
 typing_extensions==4.4.0
 urllib3==1.26.14
+uvicorn==0.20.0
+watchfiles==0.18.1
+websockets==10.4
